Add some functions

--- a/Tugas_2_MLP.ipynb
+++ b/Tugas_2_MLP.ipynb
@@ -46,7 +46,7 @@
       "source": [
         "import os"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -55,7 +55,7 @@
         "id": "sTg1X1t0Lgy-"
       },
       "source": [
-        "# Import images"
+        "# Load images"
       ]
     },
     {
@@ -86,7 +86,7 @@
         "# Directory untuk sunflower images (test)\n",
         "test_sunflower_dir = os.path.join(test_dir, 'sunflower')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
         "print('jumlah train images: ', len(os.listdir(train_daisy_dir)) + len(os.listdir(train_dandelion_dir)) + len(os.listdir(train_sunflower_dir)))\n",
         "print('jumlah test images: ', len(os.listdir(test_daisy_dir)) + len(os.listdir(test_dandelion_dir)) + len(os.listdir(test_sunflower_dir)))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
         "import matplotlib.image as mpimg\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
         "test_dandelion_fnames = os.listdir(test_dandelion_dir)\n",
         "test_sunflower_fnames = os.listdir(test_sunflower_dir)"
       ],
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -183,7 +183,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -218,7 +218,7 @@
         "import cv2\n",
         "resize_dim = (320,240)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +251,7 @@
         "  \n",
         "  return resized_flower"
       ],
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -266,7 +266,7 @@
       "source": [
         "resized_train_daisy = resize(train_daisy_dir, train_daisy_fnames)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +292,7 @@
       "source": [
         "resized_train_dandelion = resize(train_dandelion_dir, train_dandelion_fnames)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +318,7 @@
       "source": [
         "resized_train_sunflower = resize(train_sunflower_dir, train_sunflower_fnames)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,7 +344,7 @@
       "source": [
         "resized_test_daisy = resize(test_daisy_dir, test_daisy_fnames)"
       ],
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +370,7 @@
       "source": [
         "resized_test_dandelion = resize(test_dandelion_dir, test_dandelion_fnames)"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,7 +396,7 @@
       "source": [
         "resized_test_sunflower = resize(test_sunflower_dir, test_sunflower_fnames)"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,7 +416,7 @@
         "id": "EeFnlqUuW5XU"
       },
       "source": [
-        "def display(a):\n",
+        "def display(imgs):\n",
         "  fig = plt.gcf()\n",
         "  fig.set_size_inches(16, 16)\n",
         "  \n",
@@ -430,7 +430,7 @@
         "\n",
         "  plt.show()"
       ],
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -448,7 +448,7 @@
         "display(resized_train_dandelion)\n",
         "display(resized_train_sunflower)"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -490,6 +490,318 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rFRWSYim4MOc"
+      },
+      "source": [
+        "# Algoritma Backpropagation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pfZcOGVMpQ70"
+      },
+      "source": [
+        "### Aktivasi Sigmoid"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GjfpxJpWpOVI"
+      },
+      "source": [
+        "def activation(z):\n",
+        "  return 1 / (1 + np.exp(-z))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RgtiMUT8pi5A"
+      },
+      "source": [
+        "### Inisialisasi bobot and bias"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qPovGbTlpnV0"
+      },
+      "source": [
+        "def init_weight(input_dim, hidden_dim, output_dim):\n",
+        "  weights = []\n",
+        "  input_to_hidden = [{'weight': [random() for j in range(input_dim)]} for i in range(hidden_dim)]\n",
+        "  hidden_to_output = [{'weight': [random() for j in range(hidden_dim)]} for i in range(output_dim)]\n",
+        "  weights.append(input_to_hidden)\n",
+        "  weights.append(hidden_to_output)\n",
+        "  \n",
+        "  return weights\n",
+        "\n",
+        "b = 1"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bssKTgXNpweW"
+      },
+      "source": [
+        "### Menghitung error"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yRQbr_GHpsNo"
+      },
+      "source": [
+        "def error(actual, predicted):\n",
+        "  error = 1/2*(predicted - actual)**2\n",
+        "  return error"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8BmDUz1kp62c"
+      },
+      "source": [
+        "### Feedforward"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vVWTYJdSp-H9"
+      },
+      "source": [
+        "def neuron_calc(weights, neurons):\n",
+        "  for i in range(len(weights)):\n",
+        "    res += weights[i] * neurons[i]\n",
+        "  return res"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gRQXIejb-9uR"
+      },
+      "source": [
+        "def feedforward(network, pixels):\n",
+        "  neurons = pixels\n",
+        "\n",
+        "  for layer in network:\n",
+        "    next_inputs = []\n",
+        "\n",
+        "    for neuron in layer:\n",
+        "      res = neuron_calc(neuron['weight'], neurons)\n",
+        "      neuron['output'] = activation(res)\n",
+        "      next_inputs.append(neuron['output'])\n",
+        "    \n",
+        "    neurons = next_inputs\n",
+        "  \n",
+        "  return neurons"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PcwkBOqmp9iJ"
+      },
+      "source": [
+        "### Backward"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OKfczbhhqES3"
+      },
+      "source": [
+        "def backward(network, target):\n",
+        "  return"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HQ188vTLGdmH"
+      },
+      "source": [
+        "### Update Bobot"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "beZuYinDGLAZ"
+      },
+      "source": [
+        "def update_weight(network, neurons, learning_rate):\n",
+        "  return"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CEEdFEqqqHb4"
+      },
+      "source": [
+        "### Prediksi"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bK6Mi933qKFh"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ulkBifRtqPbU"
+      },
+      "source": [
+        "### Akurasi"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E1eKpbVdqR73"
+      },
+      "source": [
+        "def accuracy(predictions, facts):\n",
+        "  true = 0\n",
+        "\n",
+        "  for i in range(len(facts)):\n",
+        "    if (predictions[i] == facts[i]):\n",
+        "      true += 1\n",
+        "  \n",
+        "  return true / len(facts)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xgovw1Q0qeyy"
+      },
+      "source": [
+        "### Training"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sjsiMU1VqhY0"
+      },
+      "source": [
+        "def train_network(train_data, network, learning_rate, epoch): # apalagi ya belum kepikiran\n",
+        "  return"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c9m_ZsCIC97v"
+      },
+      "source": [
+        "### Testing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dc4cNVN1C9Ub"
+      },
+      "source": [
+        "def test_network(test_data, network, learning_rate, epoch): # apalagi ya belum kepikiran\n",
+        "  return"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3cpPXsKeCW0b"
+      },
+      "source": [
+        "# Arsitektur"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O-cNUZSeCeBn"
+      },
+      "source": [
+        "input_dim = len(resized_flower[1].shape[1] + resized_flower[1].shape[0])\n",
+        "hidden_dim = 10\n",
+        "output_dim = 3"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jQNgCf-tJu4c"
+      },
+      "source": [
+        "network = init_weight(input_dim, hidden_dim, output_dim)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5LwJbZZdqX39"
+      },
+      "source": [
+        "# Visualisasi error dan akurasi"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xdf-u5aSqb-F"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
