Adding Some Comments

--- a/Tugas_2_MLP.ipynb
+++ b/Tugas_2_MLP.ipynb
@@ -1799,7 +1799,7 @@
         "id": "Eq03HSGYPK5l"
       },
       "source": [
-        "### Grafik Akurasi"
+        "### Eksperimen Learning Rate 0.1"
       ]
     },
     {
@@ -1813,6 +1813,8 @@
         "outputId": "c32763c0-170b-4e08-e19c-50de3a6e75d5"
       },
       "source": [
+        "#accuracy\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "plt.plot(list(range(50)), train_acc, label='train')\n",
@@ -1847,6 +1849,8 @@
         "outputId": "b209e704-5cbb-4740-dd16-2723c53dac03"
       },
       "source": [
+        "#error\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "plt.plot(list(range(50)), train_err, label='train')\n",
@@ -1871,6 +1875,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WSlehAEYH9WW"
+      },
+      "source": [
+        "### Eksperimen Learning Rate 0.8"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1881,6 +1894,8 @@
         "outputId": "6cd36791-cb14-44f0-a381-d94c12ce10de"
       },
       "source": [
+        "#accuracy\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "plt.plot(list(range(50)), train_acc2, label='train')\n",
@@ -1915,6 +1930,8 @@
         "outputId": "f2fb82a0-fce5-480c-b1fd-7514a56b78b7"
       },
       "source": [
+        "#error\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "plt.plot(list(range(50)), train_err2, label='train')\n",
@@ -1937,21 +1954,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Xdf-u5aSqb-F"
-      },
-      "source": [
-        "#grafik akurasi \n",
-        "x=plt.figure()\n",
-        "plt.suptitle('Grafik Akurasi Learning Rate 0.05')\n",
-        "plt.xlabel('epoch')\n",
-        "plt.ylabel('accuracy')"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
